kubernetes/06-gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    # k3d/Traefik Ingress Controller
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # Ако користиш nginx-ingress наместо Traefik, откоментирај:
    # kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: gitea.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
